notebook: consolidate code to remove the switch tab timer

https://bugzilla.gnome.org/show_bug.cgi?id=684415